minor updates to feature tests